Tue Oct 24 23:59:10 UTC 2006  Ossama othman  <ossama_othman at symantec dot com>

        * examples/Service_Configurator/IPC-tests/server/Handle_Timeout.inl
          (init):
        * examples/Shared_Malloc/test_position_independent_malloc.cpp
          (parse_args):

          Use intptr_t instead of int when casting to void*.  Addresses
          "sizes do not match" warnings in 64-bit Intel compiler builds.

Tue Oct 24 23:49:25 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Hash_Map_Manager_T.inl (ACE_Hash_Map_Iterator_Base_Ex):

          Commented out use of ACE_TRACE macro.  The regular expression in
          the bin/fuzz.pl script used to detect ACE_TRACE mismatch
          incorrectly identifies a mismatch the ACE_TRACE question.  Once
          the fuzz script is fixed, the ACE_TRACE can be uncommented.

Tue Oct 24 22:20:38 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Truncate.h:

          Rename truncate to trunc.  Yet another attempt at fixing Borland
          compiler brain damage.

Tue Oct 24 22:01:41 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_NS_stdlib.inl (atop):

          Use intptr_t type to fix 64-bit conversion to void* warnings.

        * ace/Select_Reactor_Base.h (max_handlep1):
        * ace/Select_Reactor_Base.inl (max_handlep1):

          Changed return type to be ACE_HANDLE on UNIX platforms instead
          of size_t.  Addresses "loss of significant bits" warnings in
          64-bit Intel compiler builds.

        * ace/Select_Reactor_Base.cpp (dump):

          Corrected format specifiers for Windows configuration.

        * ace/Select_Reactor_T.cpp (work_pending):
          (wait_for_multiple_events):

          Removed unnecessary casts and corrected type of "width" variable
          that is passed to select().

        * tests/Map_Manager_Test.cpp (test_cache_map_manager):

          Fixed "might be used uninitialized" warning.
