@@ -314,8 +314,8 @@
 #  if (ACE_AIX_VERS >= 403)
 #    define ACE_HAS_PTHREADS_STD
 #    define ACE_HAS_PTHREADS_UNIX98_EXT
-#    define ACE_HAS_PTHREAD_CONTINUE
-#    define ACE_HAS_PTHREAD_SUSPEND
+#    define ACE_HAS_PTHREAD_CONTINUE_NP
+#    define ACE_HAS_PTHREAD_SUSPEND_NP
 #    define ACE_HAS_RECURSIVE_MUTEXES
 #  else
 #    define ACE_HAS_PTHREADS_DRAFT7
